WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
183918
[Web Animations] Animated transform styles are ignored when calling getComputedStyle()
https://bugs.webkit.org/show_bug.cgi?id=183918
Summary
[Web Animations] Animated transform styles are ignored when calling getComput...
Antoine Quint
Reported
2018-03-22 14:57:17 PDT
[Web Animations] Animated transform styles are ignored when calling getComputedStyle()
Attachments
Patch
(25.62 KB, patch)
2018-03-22 15:01 PDT
,
Antoine Quint
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews101 for mac-sierra
(2.24 MB, application/zip)
2018-03-22 16:04 PDT
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews106 for mac-sierra-wk2
(2.65 MB, application/zip)
2018-03-22 16:12 PDT
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews123 for ios-simulator-wk2
(2.18 MB, application/zip)
2018-03-22 16:39 PDT
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews115 for mac-sierra
(2.97 MB, application/zip)
2018-03-22 16:47 PDT
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews202 for win-future
(12.37 MB, application/zip)
2018-03-22 21:30 PDT
,
EWS Watchlist
no flags
Details
Patch
(39.50 KB, patch)
2018-03-23 03:40 PDT
,
Antoine Quint
dino
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2018-03-22 15:01:16 PDT
Created
attachment 336316
[details]
Patch
EWS Watchlist
Comment 2
2018-03-22 16:04:24 PDT
Comment on
attachment 336316
[details]
Patch
Attachment 336316
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/7067888
New failing tests: imported/w3c/web-platform-tests/web-animations/animation-model/animation-types/interpolation-per-property.html imported/w3c/web-platform-tests/web-animations/animation-model/animation-types/accumulation-per-property.html fast/css/getComputedStyle/getComputedStyle-transform.html
EWS Watchlist
Comment 3
2018-03-22 16:04:25 PDT
Created
attachment 336320
[details]
Archive of layout-test-results from ews101 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-sierra Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 4
2018-03-22 16:12:33 PDT
Comment on
attachment 336316
[details]
Patch
Attachment 336316
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/7067897
New failing tests: imported/w3c/web-platform-tests/web-animations/animation-model/animation-types/interpolation-per-property.html imported/w3c/web-platform-tests/web-animations/animation-model/animation-types/accumulation-per-property.html fast/css/getComputedStyle/getComputedStyle-transform.html
EWS Watchlist
Comment 5
2018-03-22 16:12:34 PDT
Created
attachment 336322
[details]
Archive of layout-test-results from ews106 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews106 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 6
2018-03-22 16:39:21 PDT
Comment on
attachment 336316
[details]
Patch
Attachment 336316
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/7067930
New failing tests: fast/css/getComputedStyle/getComputedStyle-transform.html
EWS Watchlist
Comment 7
2018-03-22 16:39:23 PDT
Created
attachment 336327
[details]
Archive of layout-test-results from ews123 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews123 Port: ios-simulator-wk2 Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 8
2018-03-22 16:47:45 PDT
Comment on
attachment 336316
[details]
Patch
Attachment 336316
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/7067926
New failing tests: imported/w3c/web-platform-tests/web-animations/animation-model/animation-types/interpolation-per-property.html imported/w3c/web-platform-tests/web-animations/animation-model/animation-types/accumulation-per-property.html fast/css/getComputedStyle/getComputedStyle-transform.html
EWS Watchlist
Comment 9
2018-03-22 16:47:46 PDT
Created
attachment 336334
[details]
Archive of layout-test-results from ews115 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews115 Port: mac-sierra Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 10
2018-03-22 21:30:30 PDT
Comment on
attachment 336316
[details]
Patch
Attachment 336316
[details]
did not pass win-ews (win): Output:
http://webkit-queues.webkit.org/results/7070589
New failing tests: fast/css/getComputedStyle/getComputedStyle-transform.html
EWS Watchlist
Comment 11
2018-03-22 21:30:41 PDT
Created
attachment 336354
[details]
Archive of layout-test-results from ews202 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews202 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
Antoine Quint
Comment 12
2018-03-23 03:40:08 PDT
Created
attachment 336362
[details]
Patch
Dean Jackson
Comment 13
2018-03-23 04:11:48 PDT
Comment on
attachment 336362
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=336362&action=review
> Source/WebCore/ChangeLog:16 > + Strictly looking at whether the renderer has a transform is a bad idea when determining whether a > + transform is applied for an element. Looking at the RenderStyle is preferable because in the case > + of animations running on the compositor, such as a transform-only animation or transition, the > + renderer doesn't necessarily have a transform style on it, since we don't blend properties in > + software as the animation progresses. Instead, all of the blending is performed by the compositor, > + and only the computed style object has the software-blended transform style on it. > + > + * css/CSSComputedStyleDeclaration.cpp: > + (WebCore::computedTransform):
None of this explains why there is also a change that RenderInline objects can't have a computed transform.
Antoine Quint
Comment 14
2018-03-23 04:42:45 PDT
(In reply to Dean Jackson from
comment #13
)
> Comment on
attachment 336362
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=336362&action=review
> > > Source/WebCore/ChangeLog:16 > > + Strictly looking at whether the renderer has a transform is a bad idea when determining whether a > > + transform is applied for an element. Looking at the RenderStyle is preferable because in the case > > + of animations running on the compositor, such as a transform-only animation or transition, the > > + renderer doesn't necessarily have a transform style on it, since we don't blend properties in > > + software as the animation progresses. Instead, all of the blending is performed by the compositor, > > + and only the computed style object has the software-blended transform style on it. > > + > > + * css/CSSComputedStyleDeclaration.cpp: > > + (WebCore::computedTransform): > > None of this explains why there is also a change that RenderInline objects > can't have a computed transform.
Will explain in commit. Inlines don't respect transforms.
Antoine Quint
Comment 15
2018-03-23 04:45:49 PDT
Committed
r229889
: <
https://trac.webkit.org/changeset/229889
>
Radar WebKit Bug Importer
Comment 16
2018-03-23 04:47:13 PDT
<
rdar://problem/38789926
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug